Fix name in readme

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "bin": {
     "gitski": "./dist/index.js"
   },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "build": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --banner:js=\"#!/usr/bin/env node\"",
     "dev": "npm run build && node dist/index.js"
